--- a/CONFIG.json
+++ b/CONFIG.json
@@ -9,11 +9,11 @@
     "appgallery_panic": false,
     "rustore_panic": false,
 
-    "appgallery_review" : true,
-    "google_review"     : true,
-    "apple_review"      : true,
-    "rustore_review"    : true,
-    "apk_review"        : true,
+    "appgallery_review" : false,
+    "google_review"     : false,
+    "apple_review"      : false,
+    "rustore_review"    : false,
+    "apk_review"        : false,
     "review_api_socket" : "ws://m1client-test.vibegames.tech/ws3",
 
     "review_files_list":    "https://test-client-cdn.matrp.ru/test_builds/builds/build_5-2-0_4bdc4efb/files_list.json", 
@@ -31,8 +31,8 @@
 
     "cdn_url": "https://edgecdn.matrp.ru/matrp_mobile",
     "api": "https://moblauncher.matrp.ru/api/main.json",
-    "api_socket": "wss://api-main-two.matrp.online",
-    "api_socket_new": "wss://api-main-two.matrp.online",
+    "api_socket": "ws://m1client-test.vibegames.tech/ws3e",
+    "api_socket_new": "ws://m1client-test.vibegames.tech/ws3",
     "archive_size": 1714376127,
     "archive_url": "https://edgecdn.matrp.ru/matrp_mobile/builds/build0703-prodall/archive/cache_full.zip",
 
