--- a/IpfJAiFNEMejfoiN_devCONFIG.json
+++ b/IpfJAiFNEMejfoiN_devCONFIG.json
@@ -11,8 +11,8 @@
   "google_review": false,
   "apple_review": false,
   "rustore_review": false,
-  "apk_review": false,
-  "review_api_socket": "ws://m1client-test.vibegames.tech/ws3",
+  "apk_review": true,
+  "review_api_socket": "wss://api-main-two.matrp.online",
   "review_files_list": "https://test-client-cdn.matrp.ru/test_builds/builds/build_5-2-0_4bdc4efb/files_list.json",
   "files_list": "https://test-client-cdn.matrp.ru/test_builds/builds/build_5-2-0_4bdc4efb/files_list.json",
   "dev_develop_files_list": "https://test-client-cdn.matrp.ru/test_builds/builds/build_5-2-0_4bdc4efb/files_list.json",
