--- a/lpfJAiFNEMejfoiN_devCONFIG.json
+++ b/lpfJAiFNEMejfoiN_devCONFIG.json
@@ -26,8 +26,8 @@
   "use_s2s_for_adjust": false,
   "cdn_url": "https://edgecdn.matrp.ru/matrp_mobile",
   "api": "https://moblauncher.matrp.ru/api/main.json",
-  "api_socket": "ws://m1client-test.vibegames.tech/ws3",
-  "api_socket_new": "ws://m1client-test.vibegames.tech/ws3",
+  "api_socket": "wss://api-main-two.matrp.online",
+  "api_socket_new": "wss://api-main-two.matrp.online",
   "archive_size": 1714376127,
   "archive_url": "https://edgecdn.matrp.ru/matrp_mobile/builds/build0703-prodall/archive/cache_full.zip",
   "socialFaq": "https://vk.me/matrp_help",
