--- a/IpfJAiFNEMejfoiN_prodzCONFIG.json
+++ b/IpfJAiFNEMejfoiN_prodzCONFIG.json
@@ -1,10 +1,9 @@
-
 {
-    "client_version"            : 2331,
-    "apple_client_version"      : 0,
-    "google_client_version"     : 0,
-    "appgallery_client_version" : 0,
-    "rustore_client_version"    : 0,
+    "client_version"            : 2340,
+    "apple_client_version"      : 1143,
+    "google_client_version"     : 842,
+    "appgallery_client_version" : 643,
+    "rustore_client_version"    : 644,
 
     "google_panic": false,
     "appgallery_panic": false,
@@ -15,12 +14,12 @@
     "apple_review"      : false,
     "rustore_review"    : false,
     "apk_review"        : false,
-    "review_api_socket" : "wss://api-main-two.matrp.online",
+    "review_api_socket" : "ws://m1client-test.vibegames.tech/ws3",
 
     "review_files_list":    "https://edgecdn.matrp.ru/matrp_mobile/builds/build_5-1-0_cbb3e434/files_list.json", 
     "files_list":           "https://edgecdn.matrp.ru/matrp_mobile/builds/build_5-1-0_cbb3e434/files_list.json",
 
-    "client_url":               "https://edgecdn.matrp.ru/matreshka-prod-2334.apk",
+    "client_url":               "https://edgecdn.matrp.ru/matreshka-prod-2340.apk",
     "apple_client_url":         "https://apps.apple.com/app/id6474574017",
     "google_client_url":        "https://play.google.com/store/apps/details?id=com.jekmant.matrplauncher",
     "appgallery_client_url":    "https://appgallery.huawei.com/app/C111520735",
