--- a/IpfJAiFNEMejfoiN_prodzCONFIG.json
+++ b/IpfJAiFNEMejfoiN_prodzCONFIG.json
@@ -1,5 +1,5 @@
 {
-    "client_version"            : 2340,
+    "client_version"            : 2354,
     "apple_client_version"      : 1143,
     "google_client_version"     : 842,
     "appgallery_client_version" : 643,
@@ -9,17 +9,17 @@
     "appgallery_panic": false,
     "rustore_panic": false,
 
-    "appgallery_review" : false,
-    "google_review"     : false,
-    "apple_review"      : false,
-    "rustore_review"    : false,
-    "apk_review"        : false,
+    "appgallery_review" : true,
+    "google_review"     : true,
+    "apple_review"      : true,
+    "rustore_review"    : true,
+    "apk_review"        : true,
     "review_api_socket" : "ws://m1client-test.vibegames.tech/ws3",
 
-    "review_files_list":    "https://edgecdn.matrp.ru/matrp_mobile/builds/build_5-1-0_cbb3e434/files_list.json", 
-    "files_list":           "https://edgecdn.matrp.ru/matrp_mobile/builds/build_5-1-0_cbb3e434/files_list.json",
+    "review_files_list":    "https://edgecdn.matrp.ru/matrp_mobile/builds/build_5-1-0_3365a596/files_list.json", 
+    "files_list":           "https://edgecdn.matrp.ru/matrp_mobile/builds/build_5-1-0_3365a596/files_list.json",
 
-    "client_url":               "https://edgecdn.matrp.ru/matreshka-prod-2340.apk",
+    "client_url":               "https://edgecdn.matrp.ru/matreshka-prod-2354.apk",
     "apple_client_url":         "https://apps.apple.com/app/id6474574017",
     "google_client_url":        "https://play.google.com/store/apps/details?id=com.jekmant.matrplauncher",
     "appgallery_client_url":    "https://appgallery.huawei.com/app/C111520735",
@@ -50,3 +50,5 @@
      "mLeaderboardUrl": "https://matrp.ru/leaderboard",
      "mForumUrl": "https://forum.matrp.ru/index.php"
 }
+
+
