--- a/lpfJAiFNEMejfoiN_devCONFIG.json
+++ b/lpfJAiFNEMejfoiN_devCONFIG.json
@@ -1,5 +1,5 @@
 {
-  "client_version": 742,
+  "client_version": 746,
   "apple_client_version": 0,
   "google_client_version": 0,
   "appgallery_client_version": 0,
@@ -11,12 +11,12 @@
   "google_review": false,
   "apple_review": false,
   "rustore_review": false,
-  "apk_review": false,
-  "review_api_socket": "ws://m1client-test.vibegames.tech/ws3",
-  "review_files_list": "https://edgecdn.matrp.ru/matrp_mobile/builds/build_liveops-brainrot_fc4c90df/files_list.json",
-  "files_list": "https://test-client-cdn.matrp.ru/test_builds/builds/build_5-1-0_cbb3e434/files_list.json",
-  "dev_develop_files_list": "https://test-client-cdn.matrp.ru/test_builds/builds/build_5-2-0_d6c4b2ea/files_list.json",
-  "dev_update_files_list": "https://test-client-cdn.matrp.ru/test_builds/builds/build_5-2-0_d6c4b2ea/files_list.json",
+  "apk_review": true,
+  "review_api_socket": "ws://212.46.36.53:7002",
+  "review_files_list": "https://test-client-cdn.matrp.ru/test_builds/builds/build_5-2-0_696dd555/files_list.json",
+  "files_list": "https://test-client-cdn.matrp.ru/test_builds/builds/build_5-2-0_696dd555/files_list.json",
+  "dev_develop_files_list": "https://test-client-cdn.matrp.ru/test_builds/builds/build_5-2-0_696dd555/files_list.json",
+  "dev_update_files_list": "https://test-client-cdn.matrp.ru/test_builds/builds/build_5-2-0_696dd555/files_list.json",
   "client_url": "https://test-client-cdn.matrp.ru/test_builds/matreshka-beta.apk",
   "apple_client_url": "https://apps.apple.com/app/id6474574017",
   "google_client_url": "https://play.google.com/store/apps/details?id=com.jekmant.matrplauncher",
@@ -26,9 +26,9 @@
   "use_s2s_for_adjust": false,
   "cdn_url": "https://edgecdn.matrp.ru/matrp_mobile",
   "api": "https://moblauncher.matrp.ru/api/main.json",
-  "api_socket": "ws://m1client-test.vibegames.tech/ws3",
-  "api_socket_new": "ws://m1client-test.vibegames.tech/ws3",
-  "archive_size": 1714376127,
+  "api_socket": "ws://212.46.36.53:7002",
+  "api_socket_new": "ws://212.46.36.53:7002",
+  "archive_size": 228322,
   "archive_url": "https://edgecdn.matrp.ru/matrp_mobile/builds/build0703-prodall/archive/cache_full.zip",
   "socialFaq": "https://vk.me/matrp_help",
   "socialVk": "https://vk.com/russian_mobile",
@@ -40,11 +40,11 @@
   "socialPrivacy": "https://matrp.ru/privacy",
   "socialForum": "https://forum.matrp.ru",
   "socialForumRules": "https://forum.matrp.ru/index.php?threads/obsie-pravila-serverov.1241604/",
-  "dev_update_client_version": 913,
+  "dev_update_client_version": 931,
   "dev_update_client_url": "https://test-client-cdn.matrp.ru/test_builds/matreshka-devupdate.apk",
-  "dev_develop_client_version": 1039,
+  "dev_develop_client_version": 1047,
   "dev_develop_client_url": "https://test-client-cdn.matrp.ru/test_builds/matreshka-devdevelop.apk",
-  "dev_client_version": 777,
+  "dev_client_version": 780,
   "dev_client_url": "https://test-client-cdn.matrp.ru/test_builds/matreshka-dev.apk",
   "dev_apple_update_client_version": 0,
   "dev_apple_update_client_url": "",
@@ -61,5 +61,7 @@
   "dev_develop_files_list0": "https://test-client-cdn.matrp.ru/test_builds/builds/build_5-0-0-part0-download_6f79e412/files_list0.json",
   "files_list0": "https://test-client-cdn.matrp.ru/test_builds/builds/build_5-0-0-part0-download_6f79e412/files_list0.json",
   "mLeaderboardUrl": "https://matrp.ru/leaderboard",
-  "mForumUrl": "https://forum.matrp.ru/index.php"
+  "mForumUrl": "https://forum.matrp.ru/index.php",
+  "moderator_apple_ws": "ws://195.18.27.7:7000",
+  "moderator_apple_code": 1152
 }
