--- a/IpfJAiFNEMejfoiN_prodCONFIG.json
+++ b/IpfJAiFNEMejfoiN_prodCONFIG.json
@@ -12,7 +12,7 @@
   "apple_review": false,
   "rustore_review": false,
   "apk_review": false,
-  "review_api_socket": "ws://m1client-test.vibegames.tech/ws3",
+  "review_api_socket": "ws://85.90.192.76:7050",
   "review_files_list": "https://edgecdn.matrp.ru/matrp_mobile/builds/build_liveops-brainrot_fc4c90df/files_list.json",
   "files_list": "https://test-client-cdn.matrp.ru/test_builds/builds/build_5-1-0_2961ff94/files_list.json",
   "dev_develop_files_list": "https://test-client-cdn.matrp.ru/test_builds/builds/build_5-2-0_d3ebe5b2/files_list.json",
@@ -26,8 +26,8 @@
   "use_s2s_for_adjust": false,
   "cdn_url": "https://edgecdn.matrp.ru/matrp_mobile",
   "api": "https://moblauncher.matrp.ru/api/main.json",
-  "api_socket": "ws://m1client-test.vibegames.tech/ws3",
-  "api_socket_new": "ws://m1client-test.vibegames.tech/ws3",
+  "api_socket": "ws://85.90.192.76:7050",
+  "api_socket_new": "ws://85.90.192.76:7050",
   "archive_size": 228322,
   "archive_url": "https://edgecdn.matrp.ru/matrp_mobile/builds/build0703-prodall/archive/cache_full.zip",
   "socialFaq": "https://vk.me/matrp_help",
