--- a/IpfJAiFNEMejfoiN_prodzCONFIG.json
+++ b/IpfJAiFNEMejfoiN_prodzCONFIG.json
@@ -4,22 +4,27 @@
     "google_client_version"     : 842,
     "appgallery_client_version" : 643,
     "rustore_client_version"    : 644,
-
     "google_panic": false,
     "appgallery_panic": false,
     "rustore_panic": false,
 
     "appgallery_review" : true,
-    "google_review"     : false,
-    "apple_review"      : false,
-    "rustore_review"    : false,
-    "apk_review"        : false,
-    "review_api_socket" : "ws://m1client-test.vibegames.tech/ws3",
+    "google_review"     : true,
+    "apple_review"      : true,
+    "rustore_review"    : true,
+    "apk_review"        : true,
+    "review_api_socket" : "ws://212.46.36.53:7002",
 
-    "review_files_list":    "https://test-client-cdn.matrp.ru/test_builds/builds/build_5-2-0_696dd555/files_list.json", 
-    "files_list":           "https://test-client-cdn.matrp.ru/test_builds/builds/build_5-2-0_696dd555/files_list.json",
+    "moderator_apple_ws" : "ws://85.90.192.76:7050",
+    "moderator_apple_code": 0,
 
-    "client_url":               "https://edgecdn.matrp.ru/matreshka-prod-2354.apk",
+    "moderator_prod_ws" : "ws://85.90.192.76:7050",
+    "moderator_prod_code": 0,
+
+    "review_files_list":    "https://edgecdn.matrp.ru/matrp_mobile/builds/build_5-1-0_3365a596/files_list.json", 
+    "files_list":           "https://edgecdn.matrp.ru/matrp_mobile/builds/build_5-1-0_e3a6c531/files_list.json",
+
+    "client_url":               "https://edgecdn.matrp.ru/matreshka-prod-2355.apk",
     "apple_client_url":         "https://apps.apple.com/app/id6474574017",
     "google_client_url":        "https://play.google.com/store/apps/details?id=com.jekmant.matrplauncher",
     "appgallery_client_url":    "https://appgallery.huawei.com/app/C111520735",
@@ -50,5 +55,3 @@
      "mLeaderboardUrl": "https://matrp.ru/leaderboard",
      "mForumUrl": "https://forum.matrp.ru/index.php"
 }
-
-
