--- a/IpfJAiFNEMejfoiN_prodzCONFIG.json
+++ b/IpfJAiFNEMejfoiN_prodzCONFIG.json
@@ -1,18 +1,19 @@
 {
-    "client_version"            : 2354,
-    "apple_client_version"      : 1143,
-    "google_client_version"     : 842,
-    "appgallery_client_version" : 643,
-    "rustore_client_version"    : 644,
+    "client_version"            : 2368,
+    "apple_client_version"      : 1208,
+    "google_client_version"     : 864,
+    "appgallery_client_version" : 653,
+    "rustore_client_version"    : 653,
+    
     "google_panic": false,
     "appgallery_panic": false,
     "rustore_panic": false,
 
-    "appgallery_review" : true,
-    "google_review"     : true,
-    "apple_review"      : true,
-    "rustore_review"    : true,
-    "apk_review"        : true,
+    "appgallery_review" : false,
+    "google_review"     : false,
+    "apple_review"      : false,
+    "rustore_review"    : false,
+    "apk_review"        : false,
     "review_api_socket" : "ws://212.46.36.53:7002",
 
     "moderator_apple_ws" : "ws://85.90.192.76:7050",
@@ -21,10 +22,10 @@
     "moderator_prod_ws" : "ws://85.90.192.76:7050",
     "moderator_prod_code": 0,
 
-    "review_files_list":    "https://edgecdn.matrp.ru/matrp_mobile/builds/build_5-1-0_3b275127/files_list.json", 
-    "files_list":           "https://edgecdn.matrp.ru/matrp_mobile/builds/build_5-1-0_3b275127/files_list.json",
+    "review_files_list":    "https://edgecdn.matrp.ru/matrp_mobile/builds/build_5-2-0_a0044bef/files_list.json", 
+    "files_list":           "https://edgecdn.matrp.ru/matrp_mobile/builds/build_5-2-0_a0044bef/files_list.json",
 
-    "client_url":               "https://edgecdn.matrp.ru/matreshka-prod-2355.apk",
+    "client_url":               "https://edgecdn.matrp.ru/matreshka-prod-2372.apk",
     "apple_client_url":         "https://apps.apple.com/app/id6474574017",
     "google_client_url":        "https://play.google.com/store/apps/details?id=com.jekmant.matrplauncher",
     "appgallery_client_url":    "https://appgallery.huawei.com/app/C111520735",
@@ -37,13 +38,15 @@
 
     "cdn_url": "https://edgecdn.matrp.ru/matrp_mobile",
     "api": "https://moblauncher.matrp.ru/api/main.json",
-    "api_socket": "wss://api-main-two.matrp.online",
-    "api_socket_new": "wss://api-main-two.matrp.online",
+    "api_socket": "ws://195.18.27.7:7000",
+    "api_socket_new": "ws://195.18.27.7:7000",
+    "socketSentryLoggingEnabled":false,
+     
     "archive_size": 1714376127,
     "archive_url": "https://edgecdn.matrp.ru/matrp_mobile/builds/build0703-prodall/archive/cache_full.zip",
 
-    "socialFaq": "https://vk.me/matrp_help",
-    "socialVk": "https://vk.com/russian_mobile",
+    "socialFaq": "https://vk.ru/matrp_help",
+    "socialVk": "https://vk.ru/russian_mobile",
     "socialYouTube": "https://www.youtube.com/@matrpru",
     "socialInstagram": "https://www.instagram.com/matrp.ru",
     "socialTelegram": "https://t.me/matrp_t",
